--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,43 @@
 		{% endblock %}
 	</head>
 	<body>
+		<nav>
+			<div class="container">
+				<ul>
+					<li>
+						<a href="{{path('app_home')}}">
+							Accueil</a>
+					</li>
+					{% if app.user %}
+						<li>
+							<a href="{{path('app_dish_index')}}">
+								Mes repas</a>
+						</li>
+						{% if  is_granted("ROLE_ADMIN")  %}
+							<li>
+								<a href="{{path('app_user_index')}}">
+									Utilisateurs</a>
+							</li>
+
+						{% endif %}
+						<li>
+							<a href="{{path('app_logout')}}">
+								Déconnexion</a>
+						</li>
+					{% else %}
+						<li>
+							<a href="{{path('app_register')}}">
+								S'inscrire</a>
+						</li>
+						<li>
+							<a href="{{path('app_login')}}">
+								Connexion</a>
+						</li>
+					{% endif %}
+				</ul>
+			</div>
+		</nav>
+
 		{% block body %}{% endblock %}
 	</body>
 </html>
